Structure modified and searching text objects added